# jira-creator

./: .coveragerc  .flake8  .gitignore  .pylintrc  .test_vars  .yamllint  Dockerfile  Dockerfile.unittest  MANIFEST.in  Makefile  PKG-INFO  Pipfile  README.md  TODO  checks.sh  control  create_readme.py  docstring.cache  helper_add_command.py  helper_cli.py  helper_create_readme.py  helper_create_unit_test.py  helper_docstring.py  helper_readme.py  helper_rest_op.py  helper_type_harden.py  jira-creator.spec  jira_prompts.py  pyproject.toml  readme.tmpl  rh-issue-wrapper.sh  rh-jira.py  rh_jira.py  setup.py
.cursor/commands/: clean.json  coverage.json  lint.json  setup.json  super-lint.json  test-watch.json  test.json
.github/linters/: .flake8  .isort.cfg  .python-black  pyproject.toml
.github/workflows/: ai-responder.yml  ci.yaml  main.yml
ffff/: test_allow_204_and_json_return.py  test_board_id_missing_exception.py  test_create_ai_fail.py  test_create_exception_flow.py  test_dispatch_invalid.py  test_edit_prompt_exception_fallback.py  test_fallback_transition_migrate.py  test_run_register_dispatch.py
jira/: client.py
jira_creator/: pytest.ini  rh-issue-wrapper.sh  rh_jira.py  rh_jira_plugins.py
jira_creator/commands/: __init__.py  _try_cleanup.py  cli_add_comment.py  cli_add_flag.py  cli_add_sprint.py  cli_add_to_sprint.py  cli_ai_helper.py  cli_block.py  (+41 more)
snippets/: rh_jira.py
templates/: bug.tmpl  epic.tmpl  task.tmpl  template_loader.py
tests/: test_edit_issue.py  test_list_issues.py  test_prompt_library.py  test_script_dry_run.py  test_template_loader.py
(+441 files in other folders)
