[project]
name = "jira-creator"
version = "0.0.16"
description = "CLI and tools to automate JIRA issue creation"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache"
authors = [
  { name = "David O Neill", email = "dmz.oneill@gmail.com" }
]
dependencies = []

[project.scripts]
jira-creator = "jira_creator.rh_jira:main"

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"
